libquantumida/g1/quantum_new_matrix
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
matrix.c:512:1: error: use of undeclared identifier 'complex_float'
complex_float *v2; // rax 
^
matrix.c:512:16: error: use of undeclared identifier 'v2'
complex_float *v2; // rax 
               ^
matrix.c:513:1: error: use of undeclared identifier 'complex_float'
complex_float *v3; // r12 
^
matrix.c:513:16: error: use of undeclared identifier 'v3'
complex_float *v3; // r12 
               ^
matrix.c:516:1: error: use of undeclared identifier 'v2'
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
^
matrix.c:516:23: error: expected expression
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
                      ^
matrix.c:516:8: error: use of undeclared identifier 'complex_float'
v2 = ( complex_float *)calloc( cols * rows, 8uLL); 
       ^
matrix.c:517:7: error: use of undeclared identifier 'v2'
if ( !v2 ) 
      ^
matrix.c:522:1: error: use of undeclared identifier 'v3'
v3 = v2; 
^
matrix.c:522:6: error: use of undeclared identifier 'v2'
v3 = v2; 
     ^
matrix.c:525:8: error: use of undeclared identifier 'v3'
v4.t = v3; 
       ^
11 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
